change shadow size

--- a/style.scss
+++ b/style.scss
@@ -635,3 +635,19 @@ main {
     }
 
 }
+@media screen and(min-width:1200px){
+    @keyframes shadow {
+        0% {
+            box-shadow: 0 0 0 white;
+        }
+    
+        50% {
+            box-shadow: 0 0 200px white;
+        }
+    
+        100% {
+            box-shadow: 0 0 0 white;
+        }
+    
+    }
+}
